# CFS-Simulation

./: .gitattributes  .gitignore  CMakeLists.txt  Readme.md  app.py  cfs_avl.c  cfs_avl.h  cfs_sched.c  common.c  common.h  dashboard.html  main.c  run.bat  run.sh  simulation_output.json
CFS/: cfs.c  cfs.h
EDF/: edf.c  edf.h
FCFS/: fcfs.c  fcfs.h
MLFQ/: mlfq.c  mlfq.h
Priority/: priority.c  priority.h
PropShare/: propshare.c  propshare.h
RMS/: rms.c  rms.h
RR/: rr.c  rr.h
Round_Robin_Scheduling/: scheduling  scheduling.c
Round_Robin_Scheduling/scheduling.dSYM/Contents/Resources/DWARF/: scheduling
Round_Robin_Scheduling/scheduling.dSYM/Contents/Resources/Relocations/aarch64/: scheduling.yml
SJF/: sjf.c  sjf.h
cfs_scheduler/: process_def.h
os lab el/: simulation_output.json
scheduler_dashboard/: app.py
scheduler_dashboard/static/: script.js  style.css
scheduler_dashboard/templates/: cfs.html  edf.html  fcfs.html  index.html  mlfq.html  priority.html  propshare.html  rms.html  rr.html  sjf.html
